# nusy-product-team

./: .env.example  .gitignore  .markdownlint.jsonc  ARCHITECTURE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PRACTICES.md  Dockerfile  EXPEDITION-dgx-readiness-preparation.md  EXPEDITION-neurosymbolic-domain-expert.md  EXPERIMENT_SETUP.md  FISHNET_V2_COMPLETION.md  FISHNET_V2_IMPLEMENTATION_SUMMARY.md  FUTURE-EXPEDITION-santiago-core-self-management.md  GLOSSARY.md  INTEGRATION_SUMMARY.md  MIGRATION_ROADMAP.md  Makefile  PHASE0_COMPLETION_SUMMARY.md  README.md  SANTIAGO-ARCHITECTURE-SCENARIOS.md  analyze_features.py  architecture-commentary.md  architecture-redux-prompt-v2.md  architecture-redux-prompt-v3.md  architecture-redux-prompt.md  autonomous-work-session-plan.md  com.nusy-product-team.kanban-work-poller.plist  copilot-auto-approve-settings-guide.md  demo_5_agent_workflow.py  demo_catchfish.py  demo_first_catch.py  demo_fishnet.py  demo_kanban_integration.py  demo_kanban_workflow.py  demo_redis_coordination.py  dgx-readiness-priorities.json  docker-compose.yml  experiment_runner.py  (+11 more)
.continue/: config.yaml
ahab_top_level/: research-memory-arch-w-grok.md
backlog/: autonomous-multi-agent-backlog.md  markdown-hardening-followup.md
notes/: kg.ttl  (+3 more)
santiago_core/: PHASE1_REPORT.md  PHASE2_REPORT.md  README.md  SANTIAGO_CORE_AUDIT_REPORT.md  __init__.py  api.py  pyproject.toml  run_team.py
santiago_core/agents/: __init__.py  factory.py  santiago_architect.py  santiago_developer.py  santiago_pm.py
santiago_core/agents/_proxy/: README.md  __init__.py  architect_proxy.py  base_proxy.py  consolidated_proxies.py  developer_proxy.py  ethicist_proxy.py  platform_proxy.py  pm_proxy.py  qa_proxy.py  ux_proxy.py
santiago_core/captains-journals/: README.md  captains-journal-template.md
santiago_core/cargo-manifests/: README.md  cargo-manifest-template.md
santiago_core/core/: __init__.py  agent_framework.py  mcp_service.py  team_coordinator.py
santiago_core/crew-manifests/: README.md  crew-manifest-template.md
santiago_core/navigation-charts/: README.md  navigation-chart-template.md
santiago_core/quality-assessments/: README.md  quality-assessment-template.md
santiago_core/research-logs/: README.md  research-log-template.md
santiago_core/services/: __init__.py  conversation_memory.py  documentation_integration.py  documentation_integration.py.backup  documentation_service.py  kanban_service.py  kanban_work_poller.py  knowledge_graph.py  llm_router.py  memory_coordinator.py  message_bus.py  multimodal_ingest.py  personal_memory.py  productivity_monitor.py  vllm_client.py
santiago_core/ships-logs/: README.md  ships-log-template.md
santiago_core/strategic-charts/: README.md  strategic-chart-template.md
santiago_core/tests/: test_all_proxies.py  test_ethicist_proxy.py  test_integration_phase0.py  test_proxy_base.py  test_proxy_integration.py  test_proxy_message_bus.py
santiago_core/voyage-trials/: README.md  voyage-trial-template.md
(+1076 files in other folders)
