[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nusy-pm-core"
version = "0.1.0"
description = "NuSy Product Manager Core"
authors = [
    {name = "NuSy Team", email = "nusy@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "pydantic",
    "python-dotenv",
    "rdflib",
    "networkx",
    "pytest",
    "pytest-bdd",
]

[project.scripts]
nusy = "nusy_pm_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"