[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santiago-core"
version = "0.1.0"
description = "Santiago Autonomous AI Development Framework"
authors = [
    {name = "Santiago Team", email = "santiago@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "pydantic",
    "python-dotenv",
    "rdflib",
    "networkx",
    "pytest",
    "pytest-bdd",
    "openai",
    "anthropic",
    "google-generativeai",
    "redis",
    "requests",
    "aiohttp",
]

[tool.setuptools]
packages = ["core", "agents", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"